Added all functionalities andd accesses for admin

--- a/views/ChangeFa.ejs
+++ b/views/ChangeFa.ejs
@@ -65,12 +65,12 @@ input[type=text], select {
   %>
   <%= message %> <%}%> </div>
   <div>
-    <form action="/admin/changeFA" method = "post">
-      <label for="rollNo">Student Roll No* :</label>
+    <form action="/admin/updateFA" method = "post">
+      <label for="rollNo">For Student With Roll No* :</label>
       <input type="text" id="rollNo" name="RollNo" required placeholder="Student Roll No..">
   
       <label for="name">New Faculty Advisor's Name* :</label>
-      <input type="text" id="name" name="name" required  placeholder="FA Name..">
+      <input type="text" id="name" name="FAnew" required  placeholder="FA Name..">
   
       <!-- <label for="leaves">Leaves Alloted* :</label>
       <input type="text" id="lname" name="leavesAlloted" required  placeholder="Leaves Alloted.."> -->
