--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -120,8 +120,8 @@
                   <td><%= record.typeofleave %></td>
                   <td><%= record.leavepurpose %></td>
                   <td><%= record.daysapplied %></td>
-                  <td><%= record.fromdate%></td>
-                  <td><%= record.todate %></td>
+                  <td><%= record.fromdate.toISOString().slice(0, 10);%></td>
+                  <td><%= record.todate.toISOString().slice(0, 10); %></td>
                   <td><%= record.natureofduty %></td>
                   <td><%= record.alternatestudrolno %></td>
                   <td><%= record.alternatestudname %></td>
@@ -161,7 +161,7 @@
             <div class="form-group row">
               <label for=" date-input" class="col-sm-2 col-form-label">Date </label>
               <div class="col-sm-8">
-                <input type="text" class="form-control" id="date-input"  name = "date" placeholder="DD/MM/YYYY" style="font-size: 15px;" required>
+                <input type="date" class="form-control" id="date-input"  name = "date" placeholder="DD/MM/YYYY" style="font-size: 15px;" required>
               </div>
             </div>
             <div class="form-group row">
@@ -221,23 +221,7 @@
 		}
 
 
-    // const form = document.querySelector('#holidays');
-    // const submitBtn = document.querySelector('#submitBtn');
-    // const eventInput = document.querySelector('#event');
-    // const dateInput = document.querySelector('#date-input');
-    // submitBtn.addEventListener('click', (event) => {
-    //   event.preventDefault();
-      
-      // Check if required fields are filled
-      // console.log(eventInput.value +" "+ dateInput.value);
-    //   if (eventInput.value && dateInput.value) {
-    //     form.submit(); // Submit the form
-    //   } else {
-    //     alert('Please fill in all required fields.'); // Show an error message
-    //   }
-    // });
-
-    function added(){
+   function added(){
       document.getElementById("onAdd").innerHTML = "Added Successfully!! ";
       setTimeout(()=>{
         document.getElementById("onAdd").innerHTML = '';
