--- a/views/faculty.ejs
+++ b/views/faculty.ejs
@@ -150,7 +150,13 @@
                             <td>
                                 <%= record.mentor_approval %>
                             </td>
-                            <td><input type="checkbox" name='approve'>Approve</td>
+                            <td>
+                                
+                                <form method = 'get' action = /faculty/<%=record.rollno%> >
+                                    <input type="submit" value="Open Form" style="font-family: Arial, sans-serif; font-size: 16px;" >
+                                </form> 
+
+                            </td>
                         </tr>
                         <% });} else{ %>
                             <tr>
