--- a/views/studentHomePage.ejs
+++ b/views/studentHomePage.ejs
@@ -40,6 +40,27 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"> </script>
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+
+
 
 
 
@@ -245,10 +266,67 @@
             /* border: #45a049;
             border-width: 10px;
             border: solid; */
-            padding-left: 5%;
-            padding-right: 5%;
+            /* padding-left: 5%;
+            padding-right: 5%; */
         }
 
+        .content {
+            display: none;
+            margin-top: 40px;
+        }
+
+        .margin-right {
+            margin-right: 20px !important;
+        }
+
+        .options {
+            margin-right: 20px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            width: fit-content;
+            font-size: larger;
+
+            /* padding: 0px 10px; */
+        }
+
+        .formMain {
+            border-radius: 5px;
+            background-color: #f2f2f2;
+            padding: 20px;
+            text-align: center;
+            display: block inline;
+            font-size: 20px;
+            border: 1rem;
+            font-family: 'Times New Roman', Times, serif;
+        }
+
+        #applications {
+            font-family: Arial, Helvetica, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        #applications td,
+        #applications th {
+            border: 1px solid #ddd;
+            padding: 8px;
+        }
+
+        #applications tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        #applications tr:hover {
+            background-color: #ddd;
+        }
+
+        #applications th {
+            padding-top: 12px;
+            padding-bottom: 12px;
+            text-align: left;
+            background-color: #04AA6D;
+            color: white;
+        }
     </style>
 
     <script>
@@ -532,7 +610,7 @@
 
     <div class="table-responsive" id="my-table-id">
 
-        <table class=" table table-bordered">
+        <table id="applications">
 
             <% if( leaveapplications.length==0 ) { %>
 
