redirect is not working correctly

--- a/views/studentHomePage.ejs
+++ b/views/studentHomePage.ejs
@@ -261,14 +261,15 @@
             overflow-x: hidden;
             margin-right: calc(-1 * (100vw - 100%));
         }
-
+/* 
         #my-table-id {
-            /* border: #45a049;
+            border: #45a049;
             border-width: 10px;
-            border: solid; */
-            /* padding-left: 5%;
-            padding-right: 5%; */
+            border: solid;
+            padding-left: 5%;
+            padding-right: 5%;
         }
+ */
 
         .content {
             display: none;
