--- a/views/faculty.ejs
+++ b/views/faculty.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Page</title>
+    <title>Faculty Page</title>
     <!-- <link rel = "stylesheet" href ="styles/asmin.css"></link> -->
     <link rel="shortcut icon" href="#">
     <!-- Latest compiled and minified CSS -->
@@ -151,10 +151,11 @@
                                 <%= record.mentor_approval %>
                             </td>
                             <td>
-                                
-                                <form method = 'get' action = /faculty/<%=record.rollno%> >
-                                    <input type="submit" value="Open Form" style="font-family: Arial, sans-serif; font-size: 16px;" >
-                                </form> 
+
+                                <form method='get' action=/faculty/<%=record.rollno%> >
+                                    <input type="submit" value="Open Form"
+                                        style="font-family: Arial, sans-serif; font-size: 16px;">
+                                </form>
 
                             </td>
                         </tr>
