--- a/views/studentHomePage.ejs
+++ b/views/studentHomePage.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Leave Application</title>
+    <title>Student Page</title>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css" />
     <link
